tests/ui/include-macros/mismatched-types.stderr
error[E0308]: mismatched types
  --> $DIR/mismatched-types.rs:2:20
   |
LL |     let b: &[u8] = include_str!("file.txt");
   |            -----   ^^^^^^^^^^^^^^^^^^^^^^^^ expected `&[u8]`, found `&str`
   |            |
   |            expected due to this
   |
   = note: expected reference `&[u8]`
              found reference `&'static str`
   = note: this error originates in the macro `include_str` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/mismatched-types.rs:3:19
   |
LL |     let s: &str = include_bytes!("file.txt");
   |            ----   ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `&[u8; 0]`
   |            |
   |            expected due to this
   |
   = note: expected reference `&str`
              found reference `&'static [u8; 0]`
   = note: this error originates in the macro `include_bytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
